<resources>
    <string name="app_name">AnalyticsApp</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_dashboards">Dashboards</string>
    <string name="title_reports">Reports</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="branch_key">key_live_iaNxnD3Y6aVEKOIQBdAWqccaEBc8HmeY</string>
    <string name="branch_key_test">key_test_naGFoA5Z1dTxMRJGresYQibaBshWNaAp</string>
    <string name="back_exit">Please Click Back to Exit!</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOG IN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="analytics">ANALYTICS</string>
    <string name="or">OR</string>
    <string name="signinwithgoogle">Sign in with Google</string>
    <string name="internet_error">Please Check your Internet Connection</string>
    <string name="invalid_username_password">Invalid Username or Password</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="add">ADD</string>
    <string name="setasdefault">Set as Default</string>
    <string name="loading">Loading</string>
    <string name="add_report_to">Add Report to</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="clicktoselect">No Default DashBoard Selected. Click to Select</string>
</resources>
