<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_15dp"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/logo_with_name"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:src="@drawable/logo_with_name"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/large_text_XL"
                android:text="@string/analytics"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:layout_marginTop="@dimen/margin_20dp"
                android:textSize="@dimen/small_text"
                android:text="@string/username"/>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/focus_edittext"
                android:minHeight="@dimen/margin_50dp"
                android:layout_marginTop="@dimen/margin_5dp"
                app:hintTextAppearance="@style/ThemeTextInputLayout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:textSize="@dimen/normal_text"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:gravity="left"
                android:textSize="@dimen/small_text"
                android:layout_marginTop="@dimen/margin_20dp"
                android:text="@string/password"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/focus_edittext"
                android:minHeight="@dimen/margin_50dp"
                android:layout_marginTop="@dimen/margin_5dp"
                app:hintTextAppearance="@style/ThemeTextInputLayout">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:maxLines="1"
                    android:textSize="@dimen/normal_text"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_login_green"
                android:text="@string/login"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/margin_20dp"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normal_text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="@dimen/small_text"
                android:layout_marginTop="@dimen/margin_20dp"
                android:text="@string/or"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingTop="@dimen/margin_5dp"
                android:paddingBottom="@dimen/margin_5dp"
                android:background="@drawable/focus_edittext"
                >
                <ImageView
                    android:src="@drawable/googleicon"
                    android:layout_width="40dp"
                    android:layout_height="40dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signinwithgoogle"
                    />
            </LinearLayout>
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_20dp"
                android:text="@string/forgot_password"
                android:textSize="@dimen/small_text"/>
        </LinearLayout>

    </ScrollView>

    <include layout="@layout/progress_bar_transparent"/>

</FrameLayout>